[workspace]
members = ["cli", "core", "wasm"]
default-members = ["cli", "core"]

[workspace.package]
version = "4.0.0-51a85aba"
description = "C/Rust like programming language that compiles into Lua code"
edition = "2021"
rust-version = "1.65"
authors = ["Maiori"]
repository = "https://github.com/ClueLang/Clue"
license = "MIT"
keywords = ["language", "programming-language", "lua", "compiler", "transpiler"]
categories = ["compilers"]

[workspace.dependencies]
ahash = "0.8.2"
clap = { version = "3.2.25", features = ["derive", "cargo"] }
colored = "2.0.0"

[profile.release]
lto = true
