[package]
name = "clue_core"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme = "./README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
phf = { version = "0.11", features = ["macros"] }
utf8-decode = "1.0.1"
ahash.workspace = true
clap.workspace = true
rpmalloc = { version = "0.2.2", optional = true }
serde = { version = "1.0.159", optional = true }
serde_json = { version = "1.0.96", optional = true }

[dev-dependencies]
criterion = "0.4.0"
num_cpus = "1.15.0"
flume = "0.10.14"
crossbeam-queue = "0.3.8"

[[bench]]
name = "bench"
harness = false

[features]
default = ["rpmalloc"]
serde = ["serde/derive"]
lsp = ["serde_json", "serde"]
