[package]
name = "clue_core"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme = "./README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
utf8-decode = "1.0.1"
ahash.workspace = true
clap.workspace = true
rpmalloc = { version = "0.2.2", optional = true }
serde = { version = "1.0.193", optional = true }
serde_json = { version = "1.0.108", optional = true }
colored.workspace = true

[dev-dependencies]
criterion = "0.5.1"
num_cpus.workspace = true
flume.workspace = true
crossbeam-queue.workspace = true

[[bench]]
name = "bench"
harness = false

[features]
default = ["rpmalloc"]
serde = ["serde/derive"]
lsp = ["serde_json", "serde"]
