[package]
name = "clue_core"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme = "./README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
phf = { version = "0.11.2", features = ["macros"] }
utf8-decode = "1.0.1"
ahash.workspace = true
clap.workspace = true
serde = { version = "1.0.197", optional = true }
serde_json = { version = "1.0.115", optional = true }

[dev-dependencies]
criterion = "0.5.1"
num_cpus = "1.16.0"
flume = "0.11.0"
crossbeam-queue = "0.3.11"

[[bench]]
name = "bench"
harness = false

[features]
serde = ["serde/derive"]
lsp = ["serde_json", "serde"]
