[package]
name = "clue_wasm"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme = "./README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0.159"
wasm-bindgen = "0.2.84"
clue_core = { path = "../core", version = "3.4.0-indev+92fa7467", default-features = false, features = [
    "serde",
] }
serde-wasm-bindgen = "0.5.0"
getrandom = { version = "0.2.3", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
