[package]
name = "clue_wasm"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme = "./README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0.193"
wasm-bindgen = "0.2.89"
clue_core = { path = "../core", version = "4.0.0-19359309", default-features = false, features = [
    "serde",
] }
serde-wasm-bindgen = "0.6.3"
getrandom = { version = "0.2.11", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.39"
