[package]
name = "clue_wasm"
version.workspace = true
description.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
readme = "./README.md"
repository.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = "1.0.197"
wasm-bindgen = "0.2.92"
clue_core = { path = "../core", version = "3.4.6", default-features = false, features = [
    "serde",
] }
serde-wasm-bindgen = "0.6.5"
getrandom = { version = "0.2.12", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
